# SeqVec

./: .dockerignore  .gitignore  .travis.yml  Changelog.md  Dockerfile  LICENSE  README.md  pyproject.toml  seqvec_embedder.py  tox.ini
.github/workflows/: docker.yml  pytest.yml
seqvec/: seqvec.py
seqvec_embedder/: seqvec_embedder.py
test-data/: embedded_batch0.npy  embedded_batch1.npy  embeddings.json  embeddings.npy  fallback_test_sequences.fasta  sequences.fasta  single_sequence_processing.fasta
tests/: test_embedder_package.py  test_fallbacks.py
