[tool.poetry]
name = "seqvec"
version = "0.2.1"
description = "Embeeder tool for 'Modelling the Language of Life - Deep Learning Protein Sequences'"
authors = ["Michael Heinzinger <mheinzinger@rostlab.org>"]
repository = "https://github.com/Rostlab/SeqVec"
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
# allennlp wants that instead of ^3.6
python = ">=3.6.1"
tqdm = "^4.36"
numpy = "^1.17"
torch = "^1.2"
allennlp = "^0.9.0"
h5py = "^2.10.0"
gevent = "=1.4.0" # gevent 1.5.0 is broken

[tool.poetry.dev-dependencies]
pytest = "^5.4"
black = "19.10b0"

[tool.poetry.scripts]
seqvec = 'seqvec.seqvec:main'

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.pytest_cache
  | \.tox
  | \.venv
  | \dist
  | \test-cache
)/
'''

[build-system]
requires = ["poetry~=1.0.0"]
build-backend = "poetry.masonry.api"
